--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,7 @@
 </ul>
 
 <router-outlet></router-outlet> -->
+<!-- <app-main-nav></app-main-nav> -->
 <app-headercomponent></app-headercomponent>
+<!-- <app-details></app-details> -->
+<router-outlet></router-outlet>
