--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,8 @@
 
 <router-outlet></router-outlet> -->
 <!-- <app-main-nav></app-main-nav> -->
-<app-headercomponent></app-headercomponent>
+
+<app-main-nav1></app-main-nav1>
+
+
 <!-- <app-details></app-details> -->
-<router-outlet></router-outlet>
