--- a/src/app/body/details/details.component.html
+++ b/src/app/body/details/details.component.html
@@ -4,6 +4,7 @@
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{movie.title}}</mat-card-title>
     <mat-card-subtitle>{{movie.original_language}}</mat-card-subtitle>
+    <p>{{movie.comments}}</p>
   </mat-card-header>
   <img mat-card-image src="" alt="Photo of a Shiba Inu">
   <mat-card-content>
